# mjpg-streamer

./: CMakeLists.txt  README.md
mjpg-streamer-experimental/plugins/input_xgrab/: CMakeLists.txt  input_xgrab.c  jpeg_utils.c
plugins/input_xgrab/: CMakeLists.txt  input_xgrab.c  jpeg_utils.h
